update spinner ui

--- a/app/src/main/res/layout/fragment_convert.xml
+++ b/app/src/main/res/layout/fragment_convert.xml
@@ -12,7 +12,8 @@
             android:orientation="horizontal"
             android:layout_margin="8dp"
             android:paddingTop="8dp"
-            android:paddingBottom="8dp">
+            android:paddingBottom="8dp"
+            android:background="@drawable/outside_shape">
 
             <TextView
                 android:layout_width="0dp"
@@ -21,14 +22,19 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:padding="8dp"
-                android:text="@string/point_origine_tv_str"/>
+                android:text="@string/point_origine_tv_str"
+                android:textColor="@color/purple_700"
+                android:textStyle="bold"
+                android:textSize="18sp"/>
 
             <Spinner
                 android:id="@+id/point_origine"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
-                android:gravity="center"/>
+                android:background="@drawable/spinner_style"
+                android:dropDownWidth="wrap_content"
+                android:gravity="center" />
 
 
         </LinearLayout>
