update convert fragment ui

--- a/app/src/main/res/layout/fragment_convert.xml
+++ b/app/src/main/res/layout/fragment_convert.xml
@@ -1,31 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="8dp"
         android:orientation="vertical">
+
         <LinearLayout
             android:id="@+id/linear_layout_pt_origin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/outside_shape_purple"
             android:orientation="horizontal"
-            android:layout_margin="8dp"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
-            android:background="@drawable/outside_shape">
+            android:padding="10dp">
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                android:layout_gravity="start"
                 android:layout_weight="1"
-                android:gravity="center"
+                android:ellipsize="marquee"
                 android:padding="8dp"
                 android:text="@string/point_origine_tv_str"
                 android:textColor="@color/purple_700"
-                android:textStyle="bold"
-                android:textSize="18sp"/>
+                android:textStyle="bold" />
 
             <Spinner
                 android:id="@+id/point_origine"
@@ -35,8 +34,89 @@
                 android:background="@drawable/spinner_style"
                 android:dropDownWidth="wrap_content"
                 android:gravity="center" />
-
-
         </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/linear_layout_coord_pol"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:background="@drawable/outside_shape"
+                android:gravity="center"
+                android:padding="8dp"
+                android:text="@string/objectif_tv_label"
+                android:textAllCaps="true"
+                android:textColor="#FF0000"
+                android:textStyle="bold" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:hint="@string/gst_label_tv_str">
+                <!--this is the actual edit text which takes the input-->
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/go_et"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:hint="@string/dce_label_tv_str">
+                <!--this is the actual edit text which takes the input-->
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/do_et"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal" />
+            </com.google.android.material.textfield.TextInputLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/linear_layout_pt_cible"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="10dp"
+            android:background="@drawable/outside_shape_purple">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:layout_weight="1"
+                android:padding="8dp"
+                android:ellipsize="marquee"
+                android:text="@string/point_cible_tv_str"
+                android:textColor="@color/purple_700"
+                android:textStyle="bold"/>
+
+            <Spinner
+                android:id="@+id/point_cible"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:background="@drawable/spinner_style"
+                android:dropDownWidth="wrap_content"
+                android:gravity="center" />
+        </LinearLayout>
+
+
+
+
     </LinearLayout>
 </layout>
