--- a/app/src/main/res/layout/custom_spinner_item_layout.xml
+++ b/app/src/main/res/layout/custom_spinner_item_layout.xml
@@ -9,6 +9,7 @@
         android:singleLine="true"
         android:layout_width="match_parent"
         android:layout_height="?attr/dropdownListPreferredItemHeight"
+        android:textAppearance="@style/TextAppearance.AppCompat.Title"
         android:ellipsize="marquee"
         android:gravity="center"
         tools:text="S15"/>
