--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -9,7 +9,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:background="@drawable/outside_shape"
+                android:background="@drawable/outside_shape_purple"
                 android:focusable="true"
                 android:clickable="true">
 
