--- a/app/src/main/res/layout/fragment_convert.xml
+++ b/app/src/main/res/layout/fragment_convert.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
         <variable
             name="convertVM"
@@ -15,7 +13,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:orientation="vertical"
             android:scrollbars="vertical">
@@ -26,7 +24,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/outside_shape_purple"
                 android:orientation="horizontal"
-                android:padding="10dp">
+                android:padding="7dp">
 
                 <TextView
                     android:layout_width="0dp"
@@ -34,7 +32,7 @@
                     android:layout_gravity="start"
                     android:layout_weight="1"
                     android:ellipsize="marquee"
-                    android:padding="8dp"
+                    android:padding="7dp"
                     android:text="@string/point_origine_tv_str"
                     android:textColor="@color/purple_700"
                     android:textStyle="bold" />
@@ -104,7 +102,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/outside_shape_purple"
                 android:orientation="horizontal"
-                android:padding="10dp">
+                android:padding="7dp">
 
                 <TextView
                     android:layout_width="0dp"
@@ -112,7 +110,7 @@
                     android:layout_gravity="start"
                     android:layout_weight="1"
                     android:ellipsize="marquee"
-                    android:padding="8dp"
+                    android:padding="7dp"
                     android:text="@string/point_cible_tv_str"
                     android:textColor="@color/purple_700"
                     android:textStyle="bold" />
