--- a/app/src/main/res/layout/fragment_convert.xml
+++ b/app/src/main/res/layout/fragment_convert.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="convertVM"
@@ -44,7 +45,7 @@
                     android:layout_weight="2"
                     android:background="@drawable/spinner_style"
                     android:dropDownWidth="wrap_content"
-                    android:gravity="center" />
+                    android:gravity="center"/>
             </LinearLayout>
 
             <LinearLayout
