Fix bug in spinner and update the recyclerview item layout

--- a/app/src/main/res/layout/custom_spinner_item_layout.xml
+++ b/app/src/main/res/layout/custom_spinner_item_layout.xml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <TextView
-        android:id="@+id/spinner_item"
-        style="?attr/spinnerDropDownItemStyle"
-        android:singleLine="true"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/dropdownListPreferredItemHeight"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:ellipsize="marquee"
-        android:gravity="center"
-        android:textColor="@color/purple_700"
-        tools:text="S15"/>
-</layout>
+    android:id="@+id/spinner_item"
+    style="?android:attr/spinnerDropDownItemStyle"
+    android:layout_width="match_parent"
+    android:layout_height="?attr/dropdownListPreferredItemHeight"
+    android:ellipsize="marquee"
+    android:gravity="center"
+    android:singleLine="true"
+    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+    android:textColor="@color/purple_700"
+    tools:text="s18"/>
